# src/main/scala/org/broadinstitute/dsde/workbench/leonardo/api/ProxyRoutes.scala
@@ -21,29 +21,8 @@ trait ProxyRoutes extends UserInfoDirectives with CorsSupport with CookieHelper 
   val proxyService: ProxyService
   implicit val executionContext: ExecutionContext
 
-//  protected val allProxyRoutes: Route = jupyterRoutes ~ proxyRoutes
-
   protected val proxyRoutes: Route =
-    pathPrefix("proxy" ) {
-      corsHandler {
-        pathPrefix(Segment / Segment) { (googleProjectParam, clusterNameParam) =>
-          val googleProject = GoogleProject(googleProjectParam)
-          val clusterName = ClusterName(clusterNameParam)
-          (extractRequest & extractUserInfo) { (request, userInfo) =>
-            (logRequestResultForMetrics(userInfo)) {
-              // Proxy logic handled by the ProxyService class
-              // Note ProxyService calls the LeoAuthProvider internally
-              complete {
-                proxyService.proxyNotebook(userInfo, googleProject, clusterName, request)
-              }
-            }
-          }
-        }
-      }
-    }
-
-  protected val jupyterRoutes: Route =
-    pathPrefix("notebooks") {
+    pathPrefix("proxy" | "notebooks") {
 
       corsHandler {
 
@@ -70,25 +49,42 @@ trait ProxyRoutes extends UserInfoDirectives with CorsSupport with CookieHelper 
               (logRequestResultForMetrics(userInfo)) {
                 // Proxy logic handled by the ProxyService class
                 // Note ProxyService calls the LeoAuthProvider internally
-                path("api" / "localize") { // route for custom Jupyter server extension
-                  complete {
-                    proxyService.proxyLocalize(userInfo, googleProject, clusterName, request)
-                  }
-                } ~
-                  complete {
-                    proxyService.proxyNotebook(userInfo, googleProject, clusterName, request)
-                  }
+                complete {
+                  proxyService.proxyRequest(userInfo, googleProject, clusterName, request)
+                }
               }
             }
-      } ~
-        // No need to lookup the user or consult the auth provider for this endpoint
-        path("invalidateToken") {
-          get {
-            extractToken { token =>
-              complete {
-                proxyService.invalidateAccessToken(token).map { _ =>
-                  logger.debug(s"Invalidated access token $token")
-                  StatusCodes.OK
+        } ~
+          // No need to lookup the user or consult the auth provider for this endpoint
+          path("invalidateToken") {
+            get {
+              extractToken { token =>
+                complete {
+                  proxyService.invalidateAccessToken(token).map { _ =>
+                    logger.debug(s"Invalidated access token $token")
+                    StatusCodes.OK
+                  }
+                }
+              }
+            }
+          }
+      }
+    }
+
+  protected val jupyterRoutes: Route =
+    pathPrefix("notebooks") {
+      corsHandler {
+        pathPrefix(Segment / Segment) { (googleProjectParam, clusterNameParam) =>
+          val googleProject = GoogleProject(googleProjectParam)
+          val clusterName = ClusterName(clusterNameParam)
+
+          (extractRequest & extractUserInfo) { (request, userInfo) =>
+            (logRequestResultForMetrics(userInfo)) {
+              // Proxy logic handled by the ProxyService class
+              // Note ProxyService calls the LeoAuthProvider internally
+              path("api" / "localize") { // route for custom Jupyter server extension
+                complete {
+                  proxyService.proxyLocalize(userInfo, googleProject, clusterName, request)
                 }
               }
             }
